p1/config/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service         # The permanent "Name" for this team
spec:
  selector:
    app: app1                # THIS MUST MATCH the label in the Deployment!
  ports:
    - protocol: TCP
      port: 80               # The port the Service listens on
      targetPort: 80         # The port it sends the traffic to (the Pod's window)sudo systemctl enable --now docker
