p1/config/app1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress
  # No namespace needed if you didn't create one, it goes to 'default'
spec:
  rules:
  - host: app1.com           # The "Name" the receptionist is listening for
    http:
      paths:
      - path: /              # Everything after the '/' (the whole site)
        pathType: Prefix
        backend:
          service:
            name: app1-service # Where to send the person? To the Service!
            port:
              number: 80
